# serializer version: 1
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm_domestic_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40.0,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm_domestic_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Domestic hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'dhw_temperature',
    'unique_id': 'e4684553153b44afbef2200885f379dc-dhw_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm_domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 37.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenTherm Domestic hot water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 1>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 60.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm_domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_loria_cooling_active][water_heater.opentherm_domestic_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35.0,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm_domestic_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Domestic hot water',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Domestic hot water',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 1>,
    'translation_key': 'dhw_temperature',
    'unique_id': 'bfb5ee0a88e14e5f97bfa725a760cc49-dhw_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_loria_cooling_active][water_heater.opentherm_domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 52.9,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenTherm Domestic hot water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 35.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 1>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <WaterHeaterStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 53.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm_domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
